--- a/lesson1/exercises/src/index.html
+++ b/lesson1/exercises/src/index.html
@@ -10,6 +10,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <img src="https://clipartart.com/images/work-hours-clipart-animation-gif-6.gif" alt="work work work" width="150" style="float: left;">
+  <img src="https://thumbs.gfycat.com/HonorableTornCaracal-small.gif" alt="loading" width="150" style="float: right;">
+  
   <app-root></app-root>
+  
+  <div style="text-align: center;">
+    <img src="https://lh3.googleusercontent.com/proxy/20CH2abnPkqtIhZvJyzmDq4kxWm1fW1nqfQBTYoQnADbICDoq1hbTi9ZJXgd8mXisnO8qEsCcJqMqf-ME9FA_3y-q7l7D2SoZPHjBMuSnmcOMAOozGKQk5gBYQUujURX">
+  </div> 
 </body>
 </html>
